Button styling tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -116,7 +116,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -140,7 +140,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -164,7 +164,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -188,7 +188,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -212,7 +212,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -236,7 +236,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -260,7 +260,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -284,7 +284,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -308,7 +308,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
