--- a/public/search.html
+++ b/public/search.html
@@ -97,7 +97,7 @@
           </div>
         </div>
       </div>
-      <button id="apply-filters">
+      <button id="apply-filters" class="primary-button">
         <span>Apply filters</span>
       </button>
     </div>
@@ -123,7 +123,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -147,7 +147,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -171,7 +171,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -195,7 +195,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -219,7 +219,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -243,7 +243,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -267,7 +267,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
@@ -291,7 +291,7 @@
         <div class="listing-action-buttons">
           <button class="like-button liked material-icons"></button>
           <span class="like-count">18</span>
-          <button class="start-chat"></button>
+          <button class="start-chat primary-button"></button>
           <button class="report-button material-icons">outlined_flag</button>
         </div>
       </div>
