--- a/public/top-bar.html
+++ b/public/top-bar.html
@@ -27,7 +27,9 @@
     </div>
 
     <div id="sell-button-wrapper">
-      <button id="sell-button">Sell</button>
+      <a href="/sell.html">
+        <button id="sell-button" class="primary-button">Sell</button>
+      </a>
     </div>
   </div>
 </div>
