search is complete, save for sorting use category=-1 to disable filtering use query="" to view category use page=0 for pagination

--- a/public/barebones-forms/search.html
+++ b/public/barebones-forms/search.html
@@ -46,6 +46,8 @@
       ^ eventually, this API should not require auth.
 
       <input type="text" name="query" value="" />
+      <input type="number" name="page" value="0" />
+      <input type="number" name="category" value="0" />
 
       <input type="text" name="refresh" value="putting 'immediate' here will refresh the index, which costs resources." />
       ^ refresh?
