search mostly working, save for filters

--- a/public/barebones-forms/import-dataset.html
+++ b/public/barebones-forms/import-dataset.html
@@ -56,14 +56,26 @@
       async function makeRequests() {
         let items = JSON.parse(document.querySelector("#dataset").value);
         let conditionFields = [
+          // {
+          //   question: "Are there any minor leaks on the product?",
+          //   answer: "No",
+          // },
           {
-            question: "Are there printing errors on the product?",
-            answer: "Small defect at area shown in picture",
+            question: "Does the product have any problem sectors?",
+            answer: "No",
           },
           {
-            question: "Is the figurine chipped anywhere?",
-            answer: "Nope, all solid",
+            question: "May you attach a disk health report?",
+            answer: "Not required",
           },
+          // {
+          //   question: "Are there printing errors on the product?",
+          //   answer: "Small defect at area shown in picture",
+          // },
+          // {
+          //   question: "Is the figurine chipped anywhere?",
+          //   answer: "Nope, all solid",
+          // },
           // {
           //   question: "Are there any torn areas or stains on the clothing?",
           //   answer: "Torn area",
@@ -76,17 +88,28 @@
 
         for (let i = 0; i < items.length; i++) {
           let form = new FormData();
-          form.append("category", 10);
-          form.append("preferredLocations", "Waterway Point");
+          form.append("category", 1);
+          form.append("preferredLocations", "Heartland Mall");
           form.append("multipleAvailable", false);
           form.append("conditionFields", JSON.stringify(conditionFields));
           form.append("price", items[i].price);
           form.append("description", items[i].desc);
           form.append("images", JSON.stringify([items[i].coverImg]));
           form.append("name", items[i].name);
-          form.append("jwt", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoic2FrdXJhbWlrbzM1IiwiaWF0IjoxNjI1OTg3ODY2fQ.8gQIzkpZ017C-4l7bMLSsIVdPdPnH6YGNAAkGEuIDBg");
 
-          postRequest(form);
+          // tohru
+          // form.append("jwt", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoidG9ocnUiLCJpYXQiOjE2MjY2NDU0MjV9.CfehPb_j0J3rw4-KzYDnLOuizBIeA9pdEpTFTG2KC8A");
+
+          // pekora
+          // form.append("jwt", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoicGVrb3JhIiwiaWF0IjoxNjI2NjQ0NzU1fQ.rcHDqo_7pEyMkdJgNr2lOGpir2f5vPQrYUKUz255o9Y");
+
+          // gawrgura
+          form.append("jwt", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoiZ2F3cmd1cmEiLCJpYXQiOjE2MjY2NDM3MDF9.pe3tZEU2-dyJEefS6sl31bNxVtHY6UxjOdJhwfHTE5Q");
+
+          // sakuramiko35
+          // form.append("jwt", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoic2FrdXJhbWlrbzM1IiwiaWF0IjoxNjI1OTg3ODY2fQ.8gQIzkpZ017C-4l7bMLSsIVdPdPnH6YGNAAkGEuIDBg");
+
+          await postRequest(form);
         }
       }
 
