--- a/public/search.html
+++ b/public/search.html
@@ -20,7 +20,7 @@
   <main>
     <h1 id="search-results-overview"></h1>
     <div id="filters">
-      <div class="filter filter-dropdown-expanded" id="category-filter">
+      <div class="filter" id="category-filter">
         <button class="filter-button">
           <span>Category</span>
           <i class="material-icons"></i>
@@ -43,26 +43,9 @@
           <i class="material-icons"></i>
         </button>
         <div class="filter-options">
-          <div class="filter-option">Best match</div>
           <div class="filter-option">Most recent</div>
           <div class="filter-option">Lowest price</div>
           <div class="filter-option">Highest price</div>
-        </div>
-      </div>
-      <div class="filter" id="condition-filter">
-        <button class="filter-button">
-          <span>Condition: New</span>
-          <i class="material-icons"></i>
-        </button>
-        <div class="filter-options">
-          <div class="filter-option">
-            <input type="checkbox" id="condition-new">
-            <label for="condition-new">New</label>
-          </div>
-          <div class="filter-option">
-            <input type="checkbox" id="condition-used">
-            <label for="condition-used">Used</label>
-          </div>
         </div>
       </div>
       <div class="filter">
@@ -97,202 +80,23 @@
           </div>
         </div>
       </div>
-      <button id="apply-filters" class="primary-button">
+      <!-- <button id="apply-filters" class="primary-button">
         <span>Apply filters</span>
-      </button>
+      </button> -->
     </div>
 
     <div id="search-results" class="full-width-listings-container card">
       <div class="listing">
         <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
+          <img src="/media/loader.gif" alt="Seller profile picture" class="profile-picture">
           <div class="listing-info-top-text">
-            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-            <div class="listing-age">7 hours ago</div>
+            <div class="seller-username">Loading...</div>
+            <div class="listing-age">Loading...</div>
           </div>
         </div>
-        <div class="item-image-wrapper">
-          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-        </div>
         <div class="listing-info-bottom">
-          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-          <div class="item-price">S$3999999999999999999999999999999.99</div>
-          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-          <div class="item-condition">Absolutely trashed</div>
-        </div>
-        <div class="listing-action-buttons">
-          <button class="like-button liked material-icons"></button>
-          <span class="like-count">18</span>
-          <button class="start-chat primary-button"></button>
-          <button class="report-button material-icons">outlined_flag</button>
-        </div>
-      </div>
-      <div class="listing">
-        <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
-          <div class="listing-info-top-text">
-            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-            <div class="listing-age">7 hours ago</div>
-          </div>
-        </div>
-        <div class="item-image-wrapper">
-          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-        </div>
-        <div class="listing-info-bottom">
-          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-          <div class="item-price">S$3999999999999999999999999999999.99</div>
-          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-          <div class="item-condition">Absolutely trashed</div>
-        </div>
-        <div class="listing-action-buttons">
-          <button class="like-button liked material-icons"></button>
-          <span class="like-count">18</span>
-          <button class="start-chat primary-button"></button>
-          <button class="report-button material-icons">outlined_flag</button>
-        </div>
-      </div>
-      <div class="listing">
-        <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
-          <div class="listing-info-top-text">
-            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-            <div class="listing-age">7 hours ago</div>
-          </div>
-        </div>
-        <div class="item-image-wrapper">
-          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-        </div>
-        <div class="listing-info-bottom">
-          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-          <div class="item-price">S$3999999999999999999999999999999.99</div>
-          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-          <div class="item-condition">Absolutely trashed</div>
-        </div>
-        <div class="listing-action-buttons">
-          <button class="like-button liked material-icons"></button>
-          <span class="like-count">18</span>
-          <button class="start-chat primary-button"></button>
-          <button class="report-button material-icons">outlined_flag</button>
-        </div>
-      </div>
-      <div class="listing">
-        <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
-          <div class="listing-info-top-text">
-            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-            <div class="listing-age">7 hours ago</div>
-          </div>
-        </div>
-        <div class="item-image-wrapper">
-          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-        </div>
-        <div class="listing-info-bottom">
-          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-          <div class="item-price">S$3999999999999999999999999999999.99</div>
-          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-          <div class="item-condition">Absolutely trashed</div>
-        </div>
-        <div class="listing-action-buttons">
-          <button class="like-button liked material-icons"></button>
-          <span class="like-count">18</span>
-          <button class="start-chat primary-button"></button>
-          <button class="report-button material-icons">outlined_flag</button>
-        </div>
-      </div>
-      <div class="listing">
-        <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
-          <div class="listing-info-top-text">
-            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-            <div class="listing-age">7 hours ago</div>
-          </div>
-        </div>
-        <div class="item-image-wrapper">
-          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-        </div>
-        <div class="listing-info-bottom">
-          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-          <div class="item-price">S$3999999999999999999999999999999.99</div>
-          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-          <div class="item-condition">Absolutely trashed</div>
-        </div>
-        <div class="listing-action-buttons">
-          <button class="like-button liked material-icons"></button>
-          <span class="like-count">18</span>
-          <button class="start-chat primary-button"></button>
-          <button class="report-button material-icons">outlined_flag</button>
-        </div>
-      </div>
-      <div class="listing">
-        <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
-          <div class="listing-info-top-text">
-            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-            <div class="listing-age">7 hours ago</div>
-          </div>
-        </div>
-        <div class="item-image-wrapper">
-          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-        </div>
-        <div class="listing-info-bottom">
-          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-          <div class="item-price">S$3999999999999999999999999999999.99</div>
-          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-          <div class="item-condition">Absolutely trashed</div>
-        </div>
-        <div class="listing-action-buttons">
-          <button class="like-button liked material-icons"></button>
-          <span class="like-count">18</span>
-          <button class="start-chat primary-button"></button>
-          <button class="report-button material-icons">outlined_flag</button>
-        </div>
-      </div>
-      <div class="listing">
-        <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
-          <div class="listing-info-top-text">
-            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-            <div class="listing-age">7 hours ago</div>
-          </div>
-        </div>
-        <div class="item-image-wrapper">
-          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-        </div>
-        <div class="listing-info-bottom">
-          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-          <div class="item-price">S$3999999999999999999999999999999.99</div>
-          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-          <div class="item-condition">Absolutely trashed</div>
-        </div>
-        <div class="listing-action-buttons">
-          <button class="like-button liked material-icons"></button>
-          <span class="like-count">18</span>
-          <button class="start-chat primary-button"></button>
-          <button class="report-button material-icons">outlined_flag</button>
-        </div>
-      </div>
-      <div class="listing">
-        <div class="listing-info-top">
-          <img src="/media/placeholder-profile-picture.jpeg" alt="Seller profile picture" class="profile-picture">
-          <div class="listing-info-top-text">
-            <div class="seller-username">Very Very Long Seller Username Very Very Long Seller Username</div>
-            <div class="listing-age">7 hours ago</div>
-          </div>
-        </div>
-        <div class="item-image-wrapper">
-          <img src="/media/placeholder-product-image.png" alt="Product image" class="item-image">
-        </div>
-        <div class="listing-info-bottom">
-          <div class="item-name">Alienware m15 R5 Gaming Laptop With Very Long Title</div>
-          <div class="item-price">S$3999999999999999999999999999999.99</div>
-          <div class="item-description">Dell Alienware gaming laptop with an extremely long item description</div>
-          <div class="item-condition">Absolutely trashed</div>
-        </div>
-        <div class="listing-action-buttons">
-          <button class="like-button liked material-icons"></button>
-          <span class="like-count">18</span>
-          <button class="start-chat primary-button"></button>
-          <button class="report-button material-icons">outlined_flag</button>
+          <div class="item-name">Searching the marketplace...</div>
+          <div class="item-price">S$0</div>
         </div>
       </div>
     </div>
