Sell procedure step 2

--- a/public/sell.html
+++ b/public/sell.html
@@ -57,6 +57,36 @@
           <span>Double-click to add a photo, or drag photos here</span>
         </div>   
       </div>
+
+      
+      <div id="sell-procedure-step-2" class="sell-procedure-step">
+        <h1>About the item</h1>
+
+        <div class="halves-wrapper">
+          <div class="half">
+            <h2>Condition</h2>
+            <div id="condition-select-wrapper">
+              <select id="item-condition">
+                <option value="1">Brand new</option>
+                <option value="2">Like new</option>
+                <option value="3">Lightly used</option>
+                <option value="4">Well-used</option>
+              </select>
+              <span class="material-icons">expand_more</span>
+            </div>
+          </div>
+          <div class="half">
+            <h2>Price</h2>
+            <div id="price-input-wrapper">
+              <span id="currency">S$</span>
+              <input type="text" id="item-price" placeholder="Price of your item">
+            </div>
+          </div>
+        </div>
+
+        <h2>Description</h2>
+        <textarea id="item-description" placeholder="Describe what you are selling and include any details that buyers may be interested in. People love items with stories!"></textarea>
+      </div>
   
       <div id="sell-procedure-navigation-buttons">
         <button id="back-button"><span>Back</span></button>
